k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raally
  labels:
    name: raally
    environment: production
